--- a/00-hola-mundo/src/App.css
+++ b/00-hola-mundo/src/App.css
@@ -39,6 +39,48 @@
   border-radius:999px;
   padding:6px 16px;
   font-weight:bold;
+  cursor:pointer;
+  transition: .3s ease background-color;
+  width:135px;
+}
+
+.tw-followCard-button:hover{
+  background-color:#09f;
+}
+
+.tw-followCard-text{
+  display: block;
+}
+
+.tw-followCard-button.is-following{
+  border:1px solid #bbb;
+  background-color: transparent;
+  color:#fff;
+}
+
+.tw-followCard-button.is-following:hover .tw-followCard-text{
+  display:none;
+}
+
+.tw-followCard-button.is-following:hover{
+  background-color:#222;
+  border:1px solid #fff;
+  color:red;
+  transition:.3s ease all;
+}
+
+.tw-followCard-button.is-following:hover{
+  background-color:rgba(255, 0, 0, 0.178);
+  color:red;
+  border:1px solid red;
+}
+
+.tw-followCard-button.is-following:hover .tw-followCard-stopFollow{
+  display:block;
+}
+
+.tw-followCard-stopFollow{
+  display:none;
 }
 
 .App {
